<resources>
    <string name="app_name">ProfitBank</string>
    <string name="nome">Nome</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="sexo">Sexo</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="feminino">Feminino</string>
    <string name="outro">Outro</string>
    <string name="masculino">Masculino</string>
    <string name="estado">Estado</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="finish">Finish</string>
    <string name="android_person">Android Person</string>
    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="confirm_password">Confirmar senha</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastar">Cadastar</string>
    <string name="next">Next</string>
    <string-array name="states">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>
